sass/screen.sass
/* Welcome to Compass.
 * In this file you should write your main styles. (or centralize your imports)
 * Import this file using the following HTML or equivalent:
 * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */

//IS COMPRESSED

@import "compass/reset"
@import "compass"

/************ FONTS IMPORT ***************/
@font-face
    font-family: "Helvetica Neue Thin Ext"
    src: url('../fonts/HelveticaNeueLTCom-ThEx.ttf')

@font-face
    font-family: "Helvetica Neue Thin"
    src: url('../fonts/HelveticaNeueLTCom-Th.ttf')

@font-face
    font-family: "Helvetica Neue Light"
    src: url('../fonts/HelveticaNeueLTCom-Lt.ttf')

@font-face
    font-family: "Helvetica Neue Light Ext"
    src: url('../fonts/HelveticaNeueLTCom-LtEx.ttf')

@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/css/font-awesome.min.css")


/******** VARIABLES *********/

$itemcount: 5
$listColor: #86afaf, #8ab6b6, #90bebe, #95c6c6, #99CCCC
$button-nav-color: #99CCCC
$baseSize: 8rem
$listWidth: 90%, 60%, 75%, 16%
$red-default: #7d0f00

$color-theme: #696868
$color-theme-2: #99CCCC

//---------------------------------------\\

//SKILLS BAR / CIRCLES COLORS / ARIAN COLORS

$bar-color: #ebebeb
$arian-color: #989797

/******** MIXINS *********/

//MEDIA QUERIES
@mixin respond-to($media)
    @if $media == handhelds
        @media only screen and (max-width: 980px) // TARGET ALL PHONES
            @content
    @else if $media == high-handhelds
        @media only screen and (max-width: 980px) and (min-height: 500px)
            @content
    @else if $media == IPAD
        @media only screen and (max-width: 1024px) // TARGET ALL TABLETS (IPAD & CO)
            @content
    @else if $media == genBook // TARGET ALL HD 1366 WIDTH + GENERIC BOOKS 1280 WIDTH
        @media only screen and (max-width: 1400px)
            @content
    @else if $media == very-wide // TARGET ALL SCREEN OVER 1680 WIDTH
        @media only screen and (min-width: 1800px)
            @content
//MORE-button-skillPage
@mixin repsonsive-style-button
    font-size: 1em
    @include respond-to(IPAD)
        font-size: 0.6em
    width: 150px
    @include respond-to(IPAD)
        width: 75px
    a
        display: block
        padding: 10px 15px 10px 15px
        @include respond-to(IPAD)
            padding: 5px 7px 5px 7px

//Title default style
@mixin title-default($current-class)
    .title-bloc-#{$current-class}
        width: 100%
        h1
            text-align: center
            font-size: 1.4em
            @include respond-to(handhelds)
                font-size: 1em
        h2
            @extend h1
        h3
            @extend h1
    .line-up
        width: 90%
        margin: auto
        margin-top: 10px
        margin-bottom: 15px
        height: 10px
        background-color: $color-theme-2
        @include respond-to(handhelds)
            margin: 5px auto 5px auto

//DEFAULT SLIDE STYLE

@mixin default-slide-style($slide-id, $current-class)
    ##{$slide-id}
        width: 100%
        height: 100%
        font-size: 2em
        @include respond-to(handhelds)
            font-size: 2.5em
            display: table
            .main-wrapper-#{$current-class}
                display: table-cell
                vertical-align: middle
    .main-wrapper-#{$current-class}
        @if $current-class == main-wrapper-apropos
            font-family: "Helvetica Neue Thin", 'Lato', Arial, sans-serif
            width: 100%
            height: 90%
            overflow: hidden
        @else
            font-family: "Helvetica Neue Thin", 'Lato', Arial, sans-serif
            width: 100%
            @include respond-to(handhelds)
                width: 50%
            height: 90%
            overflow: hidden
    .main-text-bloc-#{$current-class}
        position: absolute
        padding: 10rem 0 0 15rem
        width: 20rem
        height: 75%
        @include title-default($current-class)
        @include respond-to(very-wide)
            padding: 10rem 0 0 17rem
        @include respond-to(genBook)
            padding: 2.5rem 0 0 7rem
        @include respond-to(handhelds)
            width: 25rem
            padding: 0
            position: static
            margin: auto

    .text-bloc-#{$current-class}
        width: 75%
        margin: auto
        font-size: 0.5em
        text-align: left
    .main-image-bloc-#{$current-class}
/* ... */

